lambdacube-dsl/tests/reject/nameclash01.lc
main =
    let FrameBuffer = FrameBuffer (ColorImage #1 1.0)
    in ScreenOut FrameBuffer
